Implement filesystem repositories to store articles as YAML and Markdown

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,8 +1,8 @@
 imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
-    - { resource: services.yml }
     - { resource: assets_version.yml }
+    - { resource: services.xml }
 
 parameters:
     locale: fr
