--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,18 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
+        "friendsofsymfony/http-cache-bundle": "^1.3",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "fzaninotto/faker": "^1.6",
         "sentry/sentry-symfony": "^0.6.0",
         "ramsey/uuid-doctrine": "^1.2",
         "stof/doctrine-extensions-bundle": "^1.2",
         "doctrine/doctrine-migrations-bundle": "^1.0",
+        "league/commonmark": "^0.15.3",
         "league/flysystem": "^1.0",
-        "superbalist/flysystem-google-storage": "^3.0"
+        "superbalist/flysystem-google-storage": "^3.0",
+        "league/flysystem-cached-adapter": "^1.0",
+        "league/flysystem-memory": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
